Creating a authorization middleware and refactore ganerate token method
